# lazyscribe

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  data.json  dev-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: conventional-pr-title.yml  coverage-comment.yml  docs.yml  edgetest.yml  publish-package.yml  test-package.yml
docs/: Makefile  conf.py  developers.rst  index.rst  sg_execution_times.rst
docs/how-to/: artifact.rst  basic.rst  concurrency.rst  custom-artifact.rst  dependencies.rst  external-fs.rst  filter-artifacts.rst  filter.rst  index.rst  merge.rst  prefect.rst  readonly.rst  tabular.rst  tag.rst  tests.rst  version-artifacts.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_20247d0c02f473b6___init___py.html  z_20247d0c02f473b6__meta_py.html  z_20247d0c02f473b6__utils_py.html  z_20247d0c02f473b6_exception_py.html  z_20247d0c02f473b6_experiment_py.html  z_20247d0c02f473b6_linked_py.html  z_20247d0c02f473b6_project_py.html  z_20247d0c02f473b6_registry_py.html  z_20247d0c02f473b6_release_py.html  z_20247d0c02f473b6_repository_py.html  z_20247d0c02f473b6_test_py.html  z_53d7ba7c76a47d02___init___py.html  z_53d7ba7c76a47d02_base_py.html  z_53d7ba7c76a47d02_json_py.html  z_53d7ba7c76a47d02_pickle_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_smoke_test_py.html  z_a44f0ac069e85531_test_experiment_py.html  z_a44f0ac069e85531_test_handlers_py.html  z_a44f0ac069e85531_test_linked_py.html  z_a44f0ac069e85531_test_project_py.html  z_a44f0ac069e85531_test_promotion_py.html  z_a44f0ac069e85531_test_registry_py.html  z_a44f0ac069e85531_test_release_py.html  z_a44f0ac069e85531_test_repository_py.html  z_a44f0ac069e85531_test_utils_py.html
lazyscribe/: __init__.py  _meta.py  _utils.py  artifactmixin.py  exception.py  experiment.py  linked.py  project.py  registry.py  release.py  repository.py  test.py
lazyscribe/artifacts/: __init__.py  base.py  joblib.py  json.py  pickle.py  sklearn.py  yaml.py
lazyscribe/prefect/: __init__.py  experiment.py  project.py  test.py
tests/: conftest.py  smoke_test.py  test_concurrency.py  test_experiment.py  test_handlers.py  test_linked.py  test_prefect.py  test_project.py  test_promotion.py  test_registry.py  test_release.py  test_repository.py  test_utils.py
tests/data/: down-project.json  merge_append.json  merge_distinct.json  merge_update.json  project.json  project_with_test_artifacts.json
tests/repository_data/: repository.json
tutorials/: README.rst  basic.py  prefect.py  release.py  repository.py  tests.py
