[metadata]
name = lazyscribe
version = attr: lazyscribe._meta.__version__
description = Lightweight and lazy experiment logging
long_description = file: README.md
long_description_content_type = text/markdown
author = Akshay Gupta
author_email = akgcodes@gmail.com
url = https://github.com/lazyscribe/lazyscribe
python_requires = 
	>=3.7
license = MIT license
classifiers = 
	Development Status :: 2 - Pre-Alpha
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	attrs<=22.1.0,>=21.2.0
	python-slugify<=7.0.0,>=5.0.0

[options.extras_require]
build = 
	build
	bumpver
	twine
	wheel
docs = 
	furo
	matplotlib
	pandas
	pillow
	prefect<=1.1.0,>=0.5.0
	scikit-learn
	sphinx
	sphinx-gallery
	sphinx-inline-tabs
qa = 
	black
	flake8
	mypy
	pip-tools
	pydocstyle
	types-python-slugify
tests = 
	prefect<=1.1.0,>=0.5.0
	pytest
	pytest-cov
dev =
    %(build)s
    %(docs)s
    %(qa)s
    %(tests)s

[bumpver]
current_version = "0.3.0"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver:file_patterns]
setup.cfg = 
	current_version = "{version}"
lazyscribe/_meta.py = 
	__version__ = "{version}"
docs/conf.py = 
	version = "{version}"

[flake8]
max-line-length = 100
ignore = E203,W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
allow_redefinition = True

[edgetest.envs.core]
extras = 
	tests
command = 
	pytest tests
upgrade = 
	attrs
	python-slugify

